--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&display=swap');
+
+            /* font-family: 'Edu TAS Beginner', cursive; */
+            /* font-family: 'STIX Two Text', serif; */
+
 html, body {
   margin: 0 auto;
   height: 100%;
@@ -7,12 +13,8 @@ body {
   display: flex;
     width: 100vw;
     height: 100vh;
-  font-family: 'Ubuntu', sans-serif;
 }
 
-code {
-  font-family: Consolas, 'Courier New', monospace;
-}
 
 * {
   border: dotted 1px lightgray;
