--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=STIX+Two+Text:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner&display=swap');
-
-            /* font-family: 'Edu TAS Beginner', cursive; */
-            /* font-family: 'STIX Two Text', serif; */
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Brygada+1918:ital,wght@0,400;0,500;1,400;1,500&family=Work+Sans:ital,wght@0,100;0,400;0,500;1,300;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400;500&display=swap');
 
 html, body {
   margin: 0 auto;
@@ -14,7 +12,6 @@ body {
     width: 100vw;
     height: 100vh;
 }
-
 
 * {
   border: dotted 1px lightgray;
